<resources>
    <string name="app_name">My TabView</string>
    <string name="tab_text_1">Profile</string>
    <string name="tab_text_2">Setting</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="path">Path</string>
    <string name="browse">Browse</string>
    <string name="change">Change</string>
    <string name="username">Username\t\t:</string>
    <string name="uname_hint">Username</string>
    <string name="jabatan">Jabatan\t\t\t:</string>
    <string name="jabatan_hint">Jabatan</string>
    <string name="gender">Gender\t\t\t\t:</string>
    <string name="gender_hint">Gender</string>
    <string name="email">Email\t\t\t\t\t:</string>
    <string name="email_hint">Email</string>
    <string name="colon">:</string>
    <string name="save">Save</string>
    <string name="author">Avied Bachmid</string>
    <string name="aviedb">\@aviedb</string>
    <string name="fullname">Muhammad Avied Bachmid</string>
    <string-array name="jabatanSpinner">
        <item>Mahasiswa</item>
        <item>Dosen</item>
        <item>Karyawan</item>
    </string-array>
    <string-array name="genderArray">
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>
