<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <android.support.design.card.MaterialCardView
        android:id="@+id/upperCard"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="15dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/avatar"
                android:layout_marginEnd="15dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/path"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                    <android.support.design.widget.TextInputEditText
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:hint="@string/path"/>
                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp">

                    <android.support.design.button.MaterialButton
                        android:id="@+id/browseBtn"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/browse"/>

                    <android.support.design.button.MaterialButton
                        android:id="@+id/changeBtn"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/change"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </android.support.design.card.MaterialCardView>

    <android.support.design.card.MaterialCardView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="15dp"
            android:paddingEnd="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp">

                <TextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:layout_marginEnd="10dp"
                    android:textColor="@color/dark"/>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/unameTF"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                    <android.support.design.widget.TextInputEditText
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:hint="@string/uname_hint"
                        />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp">

                <TextView
                    android:id="@+id/jabatan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jabatan"
                    android:layout_marginEnd="10dp"
                    android:textColor="@color/dark"/>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/jabatanTF"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                    <android.support.design.widget.TextInputEditText
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:hint="@string/jabatan_hint"
                        />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp">

                <TextView
                    android:id="@+id/gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:layout_marginEnd="10dp"
                    android:textColor="@color/dark"/>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/genderTF"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                    <android.support.design.widget.TextInputEditText
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:hint="@string/gender_hint"
                        />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:layout_marginEnd="10dp"
                    android:textColor="@color/dark"/>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/emailTF"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                    <android.support.design.widget.TextInputEditText
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:hint="@string/email_hint"
                        />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <android.support.design.button.MaterialButton
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:text="@string/save"
                android:layout_marginBottom="10dp"/>

        </LinearLayout>

    </android.support.design.card.MaterialCardView>

</LinearLayout>